<resources>
    <string name="app_name">Hangover</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Email Or Mobile Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_dob">Date Of Birth</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_cart">Cart</string>
    <string name="action_account">Account</string>
    <string name="action_order">Order</string>
    <string name="action_forgot_password">Reset Password</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_handling_charge">FREE</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">Username should be valid email or mobile number</string>
    <string name="error_invalid_phone_number">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalide.zipcode">Invalid Zip code</string>
    <string name="error_field_confirm_password_mismatch">Confirm password mismatch</string>
    <string name="error_field_confirm_you_are_18_above">Confirm you are 18 above</string>
    <string name="error_invalid_date_of_birth">Invalid Date of Birth</string>
    <string name="error_invalid_otp">Invalid OTP</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dashboard_actiity">Hangover</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_store">Store Activity</string>
    <string name="title_activity_store_item">Item Activity</string>


    <!--Layout title-->
    <string name="layout_title_item_description">Description</string>


    <!--Action button text-->
    <string name="button_add_to_cart">Add To Cart</string>
    <string name="button_checkout">Place Order</string>
    <string name="button_proceed_to_pay">Pay </string>
    <string name="button_edit">Edit</string>
    <string name="button_verify">Verify</string>
    <string name="button_resend">Resend</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_choose">Choose</string>
    <string name="button_capture">Capture</string>
    <string name="button_upload">Upload</string>



    <!--Exception messages-->
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_data_not_found">Cannot retrieve data. Check your internet connection</string>
    <string name="exception_message_invalid_credential">Invalid Credential</string>
</resources>
