<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_shopping_cart"
        android:title="@string/action_cart"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_shopping_cart"
        app:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_account"
        android:title="@string/action_account"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_order"
        android:title="@string/action_order"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_sign_in"
        android:title="@string/action_sign_in"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_sign_out"
        android:title="@string/action_sign_out"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
